# modorganizer2-nxm-collection-dl

./: .pre-commit-config.yaml  LICENSE  README.md  __init__.py  __meta__.py  api.py  download.py  gui.py  install.py  plugin.py  plugindefinition.json  pyproject.toml  requirements.txt  var.py
.github/ISSUE_TEMPLATE/: bug-report.yaml  feature-request.yaml
.github/workflows/: build.yml
