[project]
name = "modorganizer2-nxm-collection-dl"
version = "1.0.1"
description = "A plugin for Mod Organizer 2 to download collections from Nexus Mods"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "mobase-stubs==2.5.2",
    "pre-commit>=4.5.0",
    "PyQt6==6.10.2",
]